# chn_text_norm

./: main.py  pyproject.toml
chn_text_norm/: __init__.py
src/chn_text_norm/: text.py
