[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "chn-text-norm"
version = "0.1.0"
description = "文本归一化"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://example.com/chn-text-norm"

[tool.hatch.build.targets.wheel]
packages = ["src/chn_text_norm"]
